feat: add ActivityEdit and PipelineStageManage pages
- Introduced ActivityEdit page for creating and editing activities.
- Added PipelineStageManage page for managing sales pipeline stages.
- Updated routing configuration in feature-pack.yaml.
- Updated package version to 1.0.7.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -49,6 +49,18 @@ routes:
   - path: /crm/activities
     page: ActivityList
     roles: []
+  - path: /crm/activities/new
+    page: ActivityEdit
+    roles: []
+  - path: /crm/activities/[id]
+    page: ActivityEdit
+    roles: []
+  - path: /crm/activities/[id]/edit
+    page: ActivityEdit
+    roles: []
+  - path: /crm/pipeline-stages
+    page: PipelineStageManage
+    roles: []
 
 # Navigation contributions - auto-added to shell sidebar
 nav:
