--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-crm",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "CRM feature pack with contacts, companies, deals, activities, LLM integration, RBAC, webhooks, and data export. Uses @hit/ui-kit for shell-agnostic UI.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,16 +36,23 @@
     "@hit/sdk": "*",
     "lucide-react": ">=0.263.0",
     "drizzle-orm": ">=0.30.0",
-    "openai": ">=4.0.0"
+    "openai": ">=4.0.0",
+    "@dnd-kit/core": ">=6.0.0",
+    "@dnd-kit/sortable": ">=7.0.0",
+    "@dnd-kit/utilities": ">=3.2.0"
   },
   "devDependencies": {
+    "@hit/sdk": "file:../../hit-sdks/hit-sdk-typescript",
     "@hit/ui-kit": "file:../hit-ui-kit",
     "@types/react": "^18.2.0",
     "drizzle-orm": "^0.30.0",
     "lucide-react": "^0.460.0",
     "typescript": "^5.0.0",
     "openai": "^4.0.0",
-    "next": "^14.2.5"
+    "next": "^14.2.5",
+    "@dnd-kit/core": ">=6.0.0",
+    "@dnd-kit/sortable": ">=7.0.0",
+    "@dnd-kit/utilities": ">=3.2.0"
   },
   "keywords": [
     "hit",
