--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-crm",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "CRM feature pack with contacts, companies, deals, activities, LLM integration, RBAC, webhooks, and data export. Uses @hit/ui-kit for shell-agnostic UI.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -39,7 +39,8 @@
     "openai": ">=4.0.0",
     "@dnd-kit/core": ">=6.0.0",
     "@dnd-kit/sortable": ">=7.0.0",
-    "@dnd-kit/utilities": ">=3.2.0"
+    "@dnd-kit/utilities": ">=3.2.0",
+    "recharts": ">=2.0.0"
   },
   "devDependencies": {
     "@hit/sdk": "file:../../hit-sdks/hit-sdk-typescript",
@@ -52,7 +53,8 @@
     "next": "^14.2.5",
     "@dnd-kit/core": ">=6.0.0",
     "@dnd-kit/sortable": ">=7.0.0",
-    "@dnd-kit/utilities": ">=3.2.0"
+    "@dnd-kit/utilities": ">=3.2.0",
+    "recharts": "^2.0.0"
   },
   "keywords": [
     "hit",
