feat: add default CRM pipeline stages and enhance stage management logic
- Introduced `DEFAULT_CRM_PIPELINE_STAGES` for default initialization.
- Added `code` and `isSystem` fields to `crmPipelineStages`.
- Updated `PipelineStageManage` to require and normalize stage code.
- Enhanced UI to reflect new stage properties and validation rules.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -150,7 +150,8 @@ schema:
     InsertCrmPipelineStage,
     InsertCrmWebhookConfig,
     InsertCrmApiKey,
-    InsertCrmOpenaiKey
+    InsertCrmOpenaiKey,
+    DEFAULT_CRM_PIPELINE_STAGES
   ]
 
 # API routes the feature pack expects
