feat: add CRM pipeline stages to feature pack navigation
chore: update package version to 1.0.17 in package.json

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -102,6 +102,12 @@ nav:
         icon: Activity
         weight: 140
         showWhen: authenticated
+      - id: crm-pipeline-stages
+        label: Pipeline Stages
+        path: /crm/pipeline-stages
+        icon: Workflow
+        weight: 150
+        showWhen: authenticated
 
 # Notification types this pack can emit
 notifications:
