feat: restructure CRM navigation and update package versions

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -102,12 +102,18 @@ nav:
         icon: Activity
         weight: 140
         showWhen: authenticated
-      - id: crm-pipeline-stages
-        label: Pipeline Stages
-        path: /crm/pipeline-stages
-        icon: Workflow
-        weight: 150
+      - id: crm-setup
+        label: Setup
+        icon: Settings
+        weight: 900
         showWhen: authenticated
+        children:
+          - id: crm-pipeline-stages
+            label: Pipeline Stages
+            path: /crm/pipeline-stages
+            icon: Workflow
+            weight: 100
+            showWhen: authenticated
 
 # Notification types this pack can emit
 notifications:
