--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-crm",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "description": "CRM feature pack with contacts, companies, deals, activities, LLM integration, RBAC, webhooks, and data export. Uses @hit/ui-kit for shell-agnostic UI.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,8 +37,8 @@
   "dependencies": {},
   "peerDependencies": {
     "@hit/ui-kit": "*",
-    "react": "^18.0.0 || ^19.0.0",
-    "next": "^14.0.0 || ^15.0.0",
+    "react": "^18.0.0",
+    "next": "^14.0.0",
     "@hit/sdk": "*",
     "lucide-react": ">=0.263.0",
     "drizzle-orm": ">=0.30.0",
