--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -1,8 +1,8 @@
 # Feature Pack: crm
-# CRM module with contacts, companies, deals, activities, LLM integration, RBAC, webhooks, and data export
+# CRM module with contacts, companies, deals, activities, and pipeline management
 
 name: crm
-description: CRM feature pack with contacts, companies, deals, activities, LLM integration, RBAC, webhooks, and data export
+description: CRM feature pack with contacts, companies, deals, activities, and pipeline management
 
 # Route definitions - mapped to React components
 routes:
@@ -139,29 +139,17 @@ schema:
     crmCompanies,
     crmDeals,
     crmActivities,
-    crmPersonalNotes,
     crmPipelineStages,
-    crmWebhookConfigs,
-    crmApiKeys,
-    crmOpenaiKeys,
     CrmContact,
     CrmCompany,
     CrmDeal,
     CrmActivity,
-    CrmPersonalNote,
     CrmPipelineStage,
-    CrmWebhookConfig,
-    CrmApiKey,
-    CrmOpenaiKey,
     InsertCrmContact,
     InsertCrmCompany,
     InsertCrmDeal,
     InsertCrmActivity,
-    InsertCrmPersonalNote,
     InsertCrmPipelineStage,
-    InsertCrmWebhookConfig,
-    InsertCrmApiKey,
-    InsertCrmOpenaiKey,
     DEFAULT_CRM_PIPELINE_STAGES
   ]
 
@@ -210,11 +198,6 @@ api:
       methods: [GET, PUT, DELETE]
       handler: "@hit/feature-pack-crm/server/api/activities-id"
       description: "Get, update, or delete a specific activity"
-    # Personal Notes
-    - path: /api/crm/personal-notes
-      methods: [GET, POST]
-      handler: "@hit/feature-pack-crm/server/api/personal-notes"
-      description: "List personal notes (GET) or create note (POST), scoped by user"
     # Reports
     - path: /api/crm/reports/close-rate
       methods: [GET]
@@ -232,16 +215,6 @@ api:
       methods: [GET]
       handler: "@hit/feature-pack-crm/server/api/reports-pipeline-health"
       description: "Get pipeline health by stage"
-    # Data Export
-    - path: /api/crm/data-export
-      methods: [GET]
-      handler: "@hit/feature-pack-crm/server/api/data-export"
-      description: "Bulk data export (requires API key authentication)"
-    # Webhooks
-    - path: /api/crm/webhooks
-      methods: [GET, POST, PUT, DELETE]
-      handler: "@hit/feature-pack-crm/server/api/webhooks"
-      description: "Manage webhook configurations"
     # Pipeline Stages
     - path: /api/crm/pipeline-stages
       methods: [GET, POST]
@@ -302,16 +275,4 @@ config:
       type: boolean
       default: true
       description: "Enable automatic LLM parsing of activity text (requires openai_enabled)"
-    webhook_enabled:
-      type: boolean
-      default: false
-      description: "Enable webhook notifications"
-    webhook_url:
-      type: string
-      default: ""
-      description: "Webhook URL for notifications (optional, can be configured per customer in database)"
-    data_export_enabled:
-      type: boolean
-      default: true
-      description: "Enable data export API"
 
